randomizing methods still need to be customized